feat: manipulate AST